--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": "^8.1",
         "spatie/laravel-package-tools": "^1.14.0",
+        "spatie/laravel-options": "^1.1",
         "illuminate/contracts": "^10.0"
     },
     "require-dev": {
@@ -36,7 +37,10 @@
         "psr-4": {
             "LaraUtil\\Foundation\\": "src/",
             "LaraUtil\\Foundation\\Database\\Factories\\": "database/factories/"
-        }
+        },
+        "files": [
+            "src/Helper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
